--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+html {
+  background: url('../images/beach.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
     text-align: center;
-    background: url('../images/beach.jpg');
-    background-size: auto;
 }
 
 h1 {
