--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+html {
+  background: url(../images/beach.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
     text-align: center;
-    background: url('../images/beach.jpg');
-    background-size: auto;
 }
 
 h1 {
@@ -21,7 +27,7 @@ section {
   margin-right: 30px;
   float: right;
   width: 35%;
-  font-family: 'Pirata One', cursive;
+  font-family: "Pirata One", cursive;
 
 }
 
